--- a/src/components/ui/TodoFormulario/TodoForm.css
+++ b/src/components/ui/TodoFormulario/TodoForm.css
@@ -1,6 +1,7 @@
 form {
-    width: 90%;
-    max-width: 500px;
+    width: 60%;
+    min-width: 350px;
+    margin: 0 auto;
     background-color: #fff;
     padding: 33px 40px;
     border-radius: 10px;
